# RobustICP

./: CMakeLists.txt  CMakeSettings.json  README.md
FastGlobalRegistration/: CMakeLists.txt  LaserClouds.h  PointCloud3d.h  app.cpp  test_laser_data_increment.cpp  test_laser_data_increment_odom.cpp  test_laser_data_pairwise.cpp  test_laser_data_visual_GT.cpp  test_pointcloud3d.cpp
dataset/3d/: pointcloud_ds0.pcd  pointcloud_ds1.pcd  pointcloud_ds10.pcd  pointcloud_ds100.pcd  pointcloud_ds101.pcd  pointcloud_ds102.pcd  pointcloud_ds103.pcd  pointcloud_ds104.pcd  pointcloud_ds105.pcd  pointcloud_ds106.pcd  pointcloud_ds107.pcd  pointcloud_ds108.pcd  pointcloud_ds109.pcd  pointcloud_ds11.pcd  pointcloud_ds110.pcd  pointcloud_ds111.pcd  pointcloud_ds112.pcd  pointcloud_ds113.pcd  pointcloud_ds114.pcd  pointcloud_ds12.pcd  pointcloud_ds13.pcd  pointcloud_ds14.pcd  pointcloud_ds15.pcd  pointcloud_ds16.pcd  pointcloud_ds17.pcd  pointcloud_ds18.pcd  pointcloud_ds19.pcd  pointcloud_ds2.pcd  pointcloud_ds20.pcd  pointcloud_ds21.pcd  pointcloud_ds22.pcd  pointcloud_ds23.pcd  pointcloud_ds24.pcd  pointcloud_ds25.pcd  pointcloud_ds26.pcd  pointcloud_ds27.pcd  pointcloud_ds28.pcd  pointcloud_ds29.pcd  pointcloud_ds3.pcd  pointcloud_ds30.pcd  (+76 more)
falkolib/: CMakeLists.txt
falkolib/include/falkolib/Common/: LaserScan.h
falkolib/include/falkolib/Feature/: BSC.h  CGH.h
falkolib/include/falkolib/Matching/: AHTMatcher.h  CCDAMatcher.h  NNMatcher.h
falkolib/src/Feature/: FALKOExtractor.cpp
falkolib/test/: testBSCDescriptor.cpp  testCGHDescriptor.cpp
